apps/syncthing/components/tailscale/patch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-replication
  namespace: shikanime
  annotations:
    tailscale.com/hostname: syncthing-replication
    tailscale.com/proxy-class: nishir-syncthing
    tailscale.com/tags: tag:syncthing
spec:
  loadBalancerClass: tailscale
