apps/syncthing/components/tailscale/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-replication
  namespace: shikanime
  annotations:
    tailscale.com/hostname: syncthing-replication
    tailscale.com/tags: tag:syncthing
spec:
  loadBalancerClass: tailscale
