apps/syncthing/components/tailscale/ingress.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing
  namespace: shikanime
  annotations:
    tailscale.com/tags: tag:web
spec:
  ingressClassName: tailscale
