apps/syncthing/components/tailscale/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing
  namespace: shikanime
  annotations:
    tailscale.com/tags: tag:web
  labels:
    tailscale.com/proxy-class: nishir-syncthing
spec:
  ingressClassName: tailscale
